Centred Title in 'index.html'
Used a style tag to centre the title of in the ‘index.html’ file.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Skystr Development</h1>
+<h1 style="text-align:center;">Skystr Development</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
