--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1 style="text-align:center;">Skystr Development</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <h1 style="text-align:center;">Skystr Development</h1>
+        <p>I'm hosted with GitHub Pages.</p>
+    </body>
 </html>
