Added Nice Look
Changed the ‘styles.css’ file to make the text look nicer.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1 style="text-align:center;">Skystr Development</h1>
+        <h1>Skystr</h1>
         <p>I'm hosted with GitHub Pages.</p>
     </body>
 </html>
