--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     </head>
     <body>
         <h1>Skystr</h1>
+        <nav>
+            <a href="http://skystr.github.io/">Utilities</a>
+            <a href="/utilities/">Utilities</a>
+            <a href="/games/">Games</a>
+            <a href="/misc/">Miscelaneus</a>
+        </nav>
         <p>I'm hosted with GitHub Pages.</p>
     </body>
 </html>
