--- a/:utilities:.html
+++ b/:utilities:.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Skystr</h1>
+        <h1>Utilities</h1>
         <nav>
             <a href="http://skystr.github.io/">sk</a>
             <a href="/utilities/">Utilities</a>
