Added a Test Navigation Bar
Added a navigation bar with nice styling, as well as putting a test
logo into the navigation bar to test navigation bar images.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Skystr</h1>
-        <nav>
-            <a href="http://skystr.github.io/">sk</a>
-            <a href="/utilities/">Utilities</a>
-            <a href="/games/">Games</a>
-            <a href="/misc/">Miscellaneous</a>
-        </nav>
+        <div id="nav">
+        <ul>
+            <li><a href="/"><img src="examplelogo.png" height="18" width="18" border="0"></a></li>
+            <li><a href="/utilities/">Utilities</a></li>
+            <li><a href="/games/">Games</a></li>
+            <li><a href="/misc/">Miscellaneous</a></li>
+        </ul>
+        </div>
         <p>I'm hosted with GitHub Pages.</p>
     </body>
 </html>
