Attempted Utilities Page
Added a ‘utilities.html’ page, and attempted to link this page to the
‘index.html’ page.

--- a/utilities.html
+++ b/utilities.html
@@ -12,6 +12,7 @@
             <li><a href="/misc/">Miscellaneous</a></li>
         </ul>
         </div>
+	<h1>Utilities</h1>
         <p>I'm hosted with GitHub Pages.</p>
     </body>
 </html>
