Added Pages for Subtabs
Added pages for all the sub tabs including the Utilities, Games, and
Misc sub tabs, as well as introducing a new Info sub tab.

--- a/games/index.html
+++ b/games/index.html
@@ -7,13 +7,13 @@
         <div id="nav">
         <ul>
             <li><a href="/"><img src="examplelogo.png" height="10" width="10" border="0"></a></li>
-            <li><a href="/utilities/" id="currentpage">Utilities</a></li>
-            <li><a href="/games/">Games</a></li>
+            <li><a href="/utilities/">Utilities</a></li>
+            <li><a href="/games/" id="currentpage">Games</a></li>
             <li><a href="/misc/">Miscellaneous</a></li>
             <li><a href="/info/">Info</a></li>
         </ul>
         </div>
-	<h1>Utilities</h1>
+	<h1>Games</h1>
         <p>I'm hosted with GitHub Pages.</p>
     </body>
 </html>
