--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Skystr</Title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div id="nav">
         <ul>
-            <li><a href="/"><img src="examplelogo.png" height="10" width="10" border="0"></a></li>
+            <li><a href="/" id="currentpage"><img src="examplelogo.png" height="10" width="10" border="0"></a></li>
             <li><a href="/utilities/">Utilities</a></li>
             <li><a href="/games/">Games</a></li>
             <li><a href="/misc/">Miscellaneous</a></li>
+            <li><a href="/info/">Info</a></li>
         </ul>
         </div>
         <p>I'm hosted with GitHub Pages.</p>
