--- a/info/index.html
+++ b/info/index.html
@@ -10,10 +10,10 @@
             <li><a href="/utilities/" id="currentpage">Utilities</a></li>
             <li><a href="/games/">Games</a></li>
             <li><a href="/misc/">Miscellaneous</a></li>
-            <li><a href="/info/">Info</a></li>
+            <li><a href="/info/" id="currentpage">Info</a></li>
         </ul>
         </div>
-	<h1>Utilities</h1>
+	<h1>Info</h1>
         <p>I'm hosted with GitHub Pages.</p>
     </body>
 </html>
