--- a/info/index.html
+++ b/info/index.html
@@ -7,7 +7,7 @@
         <div id="nav">
         <ul>
             <li><a href="/"><img src="examplelogo.png" height="10" width="10" border="0"></a></li>
-            <li><a href="/utilities/" id="currentpage">Utilities</a></li>
+            <li><a href="/utilities/">Utilities</a></li>
             <li><a href="/games/">Games</a></li>
             <li><a href="/misc/">Miscellaneous</a></li>
             <li><a href="/info/" id="currentpage">Info</a></li>
