--- a/misc/index.html
+++ b/misc/index.html
@@ -14,6 +14,6 @@
         </ul>
         </div>
 	<h1>Miscelanddsfsdfsd</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+        <iframe width="420" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
     </body>
 </html>
